k8s/frontend.yaml
apiVersion: v1
kind: Service
metadata:
  name: frontend-service
  namespace: msa
spec:
  type: NodePort
  selector:
    app: msa
    tier: frontend
  ports:
  - protocol: TCP
    port: 80
    nodePort: 31000
    targetPort: 3000
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend-deploy
  namespace: msa
spec:
  replicas: 1
  selector:
    matchLabels:
      app: msa
      tier: frontend
  template:
    metadata:
      labels:
        app: msa
        tier: frontend
    spec:
      containers:
      - name: react
        image: k8s-frontend-main
        imagePullPolicy: Never
        ports:
        - containerPort: 3000
